; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/nes/extr_nes_mgt.c_nes_mgt_free_skb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/nes/extr_nes_mgt.c_nes_mgt_free_skb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nes_device = type { i32 }
%struct.sk_buff = type { i32* }
%struct.nes_rskb_cb = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nes_device*, %struct.sk_buff*, i32)* @nes_mgt_free_skb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nes_mgt_free_skb(%struct.nes_device* %0, %struct.sk_buff* %1, i32 %2) #0 {
  %4 = alloca %struct.nes_device*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.nes_rskb_cb*, align 8
  store %struct.nes_device* %0, %struct.nes_device** %4, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %9 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  %12 = bitcast i32* %11 to %struct.nes_rskb_cb*
  store %struct.nes_rskb_cb* %12, %struct.nes_rskb_cb** %7, align 8
  %13 = load %struct.nes_device*, %struct.nes_device** %4, align 8
  %14 = getelementptr inbounds %struct.nes_device, %struct.nes_device* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.nes_rskb_cb*, %struct.nes_rskb_cb** %7, align 8
  %17 = getelementptr inbounds %struct.nes_rskb_cb, %struct.nes_rskb_cb* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load %struct.nes_rskb_cb*, %struct.nes_rskb_cb** %7, align 8
  %20 = getelementptr inbounds %struct.nes_rskb_cb, %struct.nes_rskb_cb* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @pci_unmap_single(i32 %15, i64 %18, i32 %21, i32 %22)
  %24 = load %struct.nes_rskb_cb*, %struct.nes_rskb_cb** %7, align 8
  %25 = getelementptr inbounds %struct.nes_rskb_cb, %struct.nes_rskb_cb* %24, i32 0, i32 0
  store i64 0, i64* %25, align 8
  %26 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %27 = call i32 @dev_kfree_skb_any(%struct.sk_buff* %26)
  ret void
}

declare dso_local i32 @pci_unmap_single(i32, i64, i32, i32) #1

declare dso_local i32 @dev_kfree_skb_any(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
